syntax = "proto3";

package readly.v1;

option go_package = "readly/pb/readly/v1;pb";

enum ReadingStatus {
  READING_STATUS_UNREAD_UNSPECIFIED = 0;
  READING_STATUS_READING = 1;
  READING_STATUS_DONE = 2;
  READING_STATUS_UNKNOWN = 3;
}